fix: security data validation
fix: security data validation

* fix: validation for security to ensure passwords match properly

* fix: email to username in security page to align with database storage

* fix: red color not showing on invalid username/password on login attempt

* refactor: reword "incorrect username or password" -> "invalid username or password!"

--- a/front-end/src/pages/login.css
+++ b/front-end/src/pages/login.css
@@ -25,5 +25,8 @@ div.login-form label {
 }
 #badLogin {
   text-align: center;
-  color: red;
+  font-size: 1.1em;
+  letter-spacing: .05rem;
+  text-decoration: underline;
+  color: red !important;
 }
